// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileUpload matches snapshot with Kb file size 1`] = `
<div
  class="root"
>
  <span>
    document.pdf
  </span>
  <span>
    1 Kb
  </span>
  <span>
    X
  </span>
</div>
`;

exports[`FileUpload matches snapshot with Mb file size 1`] = `
<div
  class="root"
>
  <span>
    video.mp4
  </span>
  <span>
    2.0 Mb
  </span>
  <span>
    X
  </span>
</div>
`;
